[gd_scene load_steps=7 format=3 uid="uid://us5p33nun6l8"]

[ext_resource type="FontFile" uid="uid://d32207lrp8rv" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_ji4te"]
[ext_resource type="Script" path="res://scripts/knight_selection.gd" id="1_pswlw"]
[ext_resource type="Texture2D" uid="uid://5hvys00yuu2n" path="res://scenes/knights/blue.png" id="3_rddbl"]
[ext_resource type="Texture2D" uid="uid://dyfrkfthe1ij0" path="res://scenes/knights/default.png" id="4_c3ncl"]
[ext_resource type="Texture2D" uid="uid://cna3580p1ty1u" path="res://scenes/knights/pixelcut-export.png" id="5_wjbyj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11ugx"]

[node name="knightSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pswlw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_11ugx")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 309.0
offset_top = 87.0
offset_right = 881.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("1_ji4te")
theme_override_font_sizes/font_size = 32
text = "Choisi ton chevalier"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -99.5
offset_right = 152.0
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TextureButton" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_rddbl")
texture_pressed = ExtResource("3_rddbl")
texture_hover = ExtResource("3_rddbl")
texture_focused = ExtResource("3_rddbl")

[node name="TextureButton2" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_c3ncl")
texture_pressed = ExtResource("4_c3ncl")
texture_hover = ExtResource("4_c3ncl")
texture_focused = ExtResource("4_c3ncl")

[node name="TextureButton3" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_wjbyj")
texture_pressed = ExtResource("5_wjbyj")
texture_hover = ExtResource("5_wjbyj")
texture_focused = ExtResource("5_wjbyj")

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_right = 228.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("1_ji4te")
theme_override_font_sizes/font_size = 32
text = "Retour"

[connection signal="pressed" from="Panel/HBoxContainer/TextureButton" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/TextureButton2" to="." method="_on_default_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/TextureButton3" to="." method="_on_red_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_back_pressed"]
